src/objects/RequestFormProduct__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Name</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Request Form Products</relationshipLabel>
        <relationshipName>Request_Form_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RequestForm__c</fullName>
        <label>Request Form</label>
        <referenceTo>RequestForm__c</referenceTo>
        <relationshipLabel>Request Form Products</relationshipLabel>
        <relationshipName>Request_Form_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Request Form Product</label>
    <nameField>
        <displayFormat>PRF- {000000}</displayFormat>
        <label>RFP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Form Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>